gateway/envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: galactus_service
                      domains: ["*"]
                      cors:
                        allow_origin_string_match:
                          - exact: "*"
                        allow_methods: "GET, POST, OPTIONS, PUT, DELETE"
                        allow_headers: "keep-alive,user-agent,cache-control,content-type,
                        x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,
                        content-length,grpc-timeout"
                        expose_headers: "grpc-status,grpc-message"
                        max_age: "1728000"
                        allow_credentials: false
                      routes:
                        - match:
                            prefix: "/GalactusController/"
                          route:
                            cluster: galactus
                            timeout: 60s
                            prefix_rewrite: "/GalactusController/"
                        - match:
                            prefix: "/BrainrotService/"
                          route:
                            cluster: brainrot-service
                            timeout: 60s
                        - match:
                            prefix: "/SocialService/"
                          route:
                            cluster: social-service
                            timeout: 60s
                        - match:
                            prefix: "/StreamService/"
                          route:
                            cluster: stream-service
                            timeout: 60s
                        - match:
                            prefix: "/caption"
                          route:
                            cluster: ai-service
                            timeout: 500s
                        - match:
                            prefix: "/NotificationService"
                          route:
                            cluster: notification-service
                            timeout: 60s
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: galactus
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      http2_protocol_options: {}
      load_assignment:
        cluster_name: galactus
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: galactus
                      port_value: 3000
    - name: brainrot-service
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      http2_protocol_options: { }
      load_assignment:
        cluster_name: brainrot-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: brainrot-service
                      port_value: 3001
    - name: social-service
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      http2_protocol_options: { }
      load_assignment:
        cluster_name: social-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: social-service
                      port_value: 3002
    - name: stream-service
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      http2_protocol_options: { }
      load_assignment:
        cluster_name: stream-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: stream-service
                      port_value: 3003
    - name: setting-service
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      http2_protocol_options: { }
      load_assignment:
        cluster_name: setting-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: setting-service
                      port_value: 3004
    - name: notification-service
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      http2_protocol_options: { }
      load_assignment:
        cluster_name: notification-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: notification-service
                      port_value: 3004

    - name: ai-service
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: ai-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ai-service
                      port_value: 5000
